<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_margin="@dimen/_13sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp"
            android:background="@color/white">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_document_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/document_number"
                android:textColor="@color/textSecondary"
                android:fontFamily="@font/helvetica_neue_medium"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintTop_toTopOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_document_number"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_document_number"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                app:srcCompat="@drawable/emblem_of_vietnam"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="@dimen/_8sdp"
                android:id="@+id/label_full_name"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="@color/textSecondary"
                android:fontFamily="@font/helvetica_neue_medium"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_document_number"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/TextView.Bold.Bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_full_name"/>


            <LinearLayout
                android:layout_marginTop="@dimen/_8sdp"
                android:id="@+id/ll_gender_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_full_name"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/label_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/label_gender"
                        android:textColor="@color/textSecondary"
                        android:fontFamily="@font/helvetica_neue_medium"
                        android:textSize="@dimen/text_size_medium"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_gender"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextView.Bold.Bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/label_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_birthday"
                        android:textColor="@color/textSecondary"
                        android:fontFamily="@font/helvetica_neue_medium"
                        android:textSize="@dimen/text_size_medium"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NA/NA/NA"
                        android:textColor="@color/black"
                        style="@style/TextView.Bold.Bold"/>
                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="@dimen/_8sdp"
                android:id="@+id/label_place_of_residence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_of_residence"
                android:textColor="@color/textSecondary"
                android:fontFamily="@font/helvetica_neue_medium"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_gender_birthday"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_place_of_residence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30sdp"
                style="@style/TextView.Bold.Bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_place_of_residence"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="@dimen/_8sdp"
                android:id="@+id/label_date_of_expiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_date_of_issue"
                android:textColor="@color/textSecondary"
                android:fontFamily="@font/helvetica_neue_medium"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_place_of_residence"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_date_of_expiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="00/00/0000"
                android:textColor="@color/black"
                android:layout_marginEnd="@dimen/_30sdp"
                style="@style/TextView.Bold.Bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_date_of_expiration"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>